--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,17 @@ font-family: 'Anton', sans-serif;
   font-family: 'Lora', serif;
   color: #f87800;
 }
+
+/* tablelist entry  */
+.tablelist {
+  background: #fff;
+  padding: 8px;
+  border: 0;
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  margin-right: 20px;
+}
+
+.list-item{
+  height: 80px;
+  width: 100%;
+}
