--- a/src/App.css
+++ b/src/App.css
@@ -1,106 +1,43 @@
 /* background of whole app*/
+
 body {
-  background: #f87800;
+  background: #ffffff;
 }
 
 /*header from Header jsx*/
-.page-header{
-font-family: 'Anton', sans-serif;
- background: #fafafa;
- height: 120px;
- color: #f87800;
- text-align: center
+
+.page-header {
+  height: 200px;
+  width: 100%;
+  font-family: 'Anton', sans-serif;
+  color: #FF1920;
+  text-align: center;
 }
 
 /*header title from Header jsx*/
-.page-title{
+
+.page-title {
   font-size: 35px;
 }
 
 /*header position from Header jsx*/
-.page-header{
-    font-size: 20px;
+
+.page-header {
+  font-size: 20px;
 }
 
 /*header-slogan from Header jsx*/
-.page-slogan{
-  font-size: 15px;
+
+.page-slogan {
+  font-size: 100%;
   font-family: 'Pacifico', cursive;
-}
-
-.search {
   text-align: center;
-  margin-bottom: 20px;
-  border-radius: 2px;
-  height: 30px;
 }
 
-.search-bar .form-control {
-  width: 80%
-}
-.search-bar .btn {
-  border-radius: 2px;
-  border-color: #d3d3d3;
-  background: #f8f8f8;
-  width: 20%;
-  margin-left: -1px;
-}
-
-.search-bar .btn:hover {
-  border-color: #c6c6c6;
-  background: #f0f0f0;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.10);
-}
-
-/*table component from TableList jsx*/
-.table-list {
- font-family: Georgia, "Times New Roman", Times, serif;
- height: 100px;
- font-style: italic;
- color: #f87800;
-}
-
-.tableList-entry {
-  color: #f87800;
-  background: white;
-  font-size: 10px;
-  padding: 0px;
-  margin: auto;
-  border: 3px solid #73AD21;
-}
-
-.result-list-entry-title {
-  font-weight: bold;
-  font-family: Georgia, "Times New Roman", Times, serif;
-}
-
-.result-list-entry-title:hover {
-  color: #e62117;
-  cursor: pointer;
-}
-
-.result-list-entry-detail {
-  font-size: 12px;
-  color: #999;
-}
-
-.list-body {
-  padding-left: 20px;
-  color: white;
-  font-family: 'Lora', serif;
-  color: #f87800;
-}
-
-/* tablelist entry  */
-.tablelist {
-  background: #fff;
-  padding: 8px;
-  border: 0;
-  box-shadow: 0 1px 2px rgba(0,0,0,.1);
-  margin-right: 20px;
-}
-
-.list-item{
-  height: 80px;
-  width: 100%;
+.entries {
+  margin: 1% 10% 1% 10%;
+  width: 80%;
+  text-align: center;
+  background: rgb(224, 221, 221);
+  border: 1px solid black;
 }
